[tool.poetry]
name = "torchprep"
version = "0.1.0"
description = "The easiest way to prepare Pytorch models for inference"
authors = ["Mark Saroufim <marksaroufim@fb.com>"]
readme = "README.md"

[tool.poetry.scripts]
torchprep = "torchprep.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.4.0"}
torch = "^1.9.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
