set(TS_UTILS_SRC_DIR "${torchserve_cpp_SOURCE_DIR}/src/utils")

list(APPEND TS_UTILS_SOURCE_FILES ${TS_UTILS_SRC_DIR}/config.cc)
list(APPEND TS_UTILS_SOURCE_FILES ${TS_UTILS_SRC_DIR}/file_system.cc)
list(APPEND TS_UTILS_SOURCE_FILES ${TS_UTILS_SRC_DIR}/model_archive.cc)
list(APPEND TS_UTILS_SOURCE_FILES ${TS_UTILS_SRC_DIR}/logging.cc)
list(APPEND TS_UTILS_SOURCE_FILES ${TS_UTILS_SRC_DIR}/metrics/units.cc)
list(APPEND TS_UTILS_SOURCE_FILES ${TS_UTILS_SRC_DIR}/metrics/log_metric.cc)
list(APPEND TS_UTILS_SOURCE_FILES ${TS_UTILS_SRC_DIR}/metrics/yaml_config.cc)
list(APPEND TS_UTILS_SOURCE_FILES ${TS_UTILS_SRC_DIR}/metrics/log_metrics_cache.cc)
list(APPEND TS_UTILS_SOURCE_FILES ${TS_UTILS_SRC_DIR}/metrics/registry.cc)
add_library(ts_utils SHARED ${TS_UTILS_SOURCE_FILES})
target_include_directories(ts_utils PUBLIC ${TS_UTILS_SRC_DIR})
target_include_directories(ts_utils PRIVATE ${Boost_INCLUDE_DIRS})
target_link_libraries(ts_utils ${FOLLY_LIBRARIES} ${CMAKE_DL_LIBS} ${Boost_LIBRARIES} yaml-cpp::yaml-cpp)
install(TARGETS ts_utils DESTINATION ${torchserve_cpp_SOURCE_DIR}/_build/libs)

list(APPEND FOO_SOURCE_FILES ${TS_UTILS_SRC_DIR}/ifoo.hh)
list(APPEND FOO_SOURCE_FILES ${TS_UTILS_SRC_DIR}/foo.hh)
list(APPEND FOO_SOURCE_FILES ${TS_UTILS_SRC_DIR}/foo.cc)
add_library(foo SHARED ${FOO_SOURCE_FILES})
target_include_directories(foo PUBLIC ${TS_UTILS_SRC_DIR})
